--- a/docs/01.Getting-Started/01.Overview.md
+++ b/docs/01.Getting-Started/01.Overview.md
@@ -11,7 +11,7 @@ some_url: https://docs.composable.ai
 
 Composable DataOps Platform is a full-stack intelligent data operations platform with built-in services for data orchestration, automation and analytics. It accelerates data engineering, preparation and analysis. Composable is built as a modern, native cloud application, with a highly scalable – *composable* – architecture.
 
-The platform is available in two editions, based on the deployment model.
+The platform is available in three editions, based on the deployment model.
 
 ## Editions & Deployment
 
@@ -27,4 +27,6 @@ Composable is a native cloud application, optimized for a cloud computing archit
 
 ### Composable Edge
 
-For tactical edge applications, requiring just-in-time analytics, Composable can be configured and deployed to optimize the minimal compute and storage resources available. Please consult with us at [support@composable.ai](mailto:support@composable.ai) for further information on edge deployments.
+For tactical edge applications, requiring just-in-time analytics, Composable can be configured and deployed to optimize the minimal compute and storage resources available.
+
+Please consult with us at [support@composable.ai](mailto:support@composable.ai) for further information on enterprise, cloud and edge deployments.
