--- a/docs/10.Users-and-Groups/01.Overview.md
+++ b/docs/10.Users-and-Groups/01.Overview.md
@@ -15,7 +15,7 @@ Users and Groups are two core entities within the platform that are considered s
 
 ## Users
 
-Users create accounts in a similar fashion to any other website. The typical [registration workflow](../02.Navigation/) steps include:
+Users create accounts in a similar fashion to any other website. The typical [registration workflow](../02.Composable-Platform/02.Navigation.md) steps include:
 
 ![Composable Registration](../02.Composable-Platform/img/02.02.Composable2.0_Reg.png)
 
