--- a/docs/12.Code-Promotion/03.Optional-Settings.md
+++ b/docs/12.Code-Promotion/03.Optional-Settings.md
@@ -132,6 +132,15 @@ The input `app` is a [`Resource<Application>`](https://dev.composable.ai/api/Com
 
 **If [`ApplicationTransform`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_ApplicationTransform) (or [`QueryViewTransform`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_QueryViewTransform)) is set, it will be called on every synced DataFlow (or QueryView), so be sure to write your tranform in such a way that it will only change DataFlows (or QueryViews) you want to change.**
 
+### Source Search Parameters 
+
+The search string [`SyncSettings.SourceSearchParameters`]
+(https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SourceSearchParameters) can be specified to filter which DataFlows and QueryViews from the source folders are synced. If specified, the search condition is applied at every source folder when selecting DataFlows and QueryViews to sync. The sync behavior of other resources is not impacted. 
+
+With [`SyncSettings.SourceSearchParameters`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SourceSearchParameters) = "(name : "app1") OR (name : "app2")", a DataFlow or QueryView from one of the source folders is only synced if it has the name "app1" or "app2".
+
+With [`SyncSettings.SourceSearchParameters`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SourceSearchParameters) = "(Type : "DataFlow")", only DataFlows are synced. 
+
 ### Sync Run Retention Settings
 
 If the boolean option [`SyncSettings.SyncRetentionSettings`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SyncRetentionSettings) is `true`, then run retention settings for all DataFlows will be copied from the source to the target. These settings are visible on the runs page for a DataFlow and include things like "Days to Keep Runs".
