--- a/docs/12.Code-Promotion/03.Optional-Settings.md
+++ b/docs/12.Code-Promotion/03.Optional-Settings.md
@@ -136,9 +136,9 @@ The input `app` is a [`Resource<Application>`](https://dev.composable.ai/api/Com
 
 The search string [`SyncSettings.SourceSearchParameters`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SourceSearchParameters) can be specified to filter which DataFlows and QueryViews from the source folders are synced. If specified, the search condition is applied at every source folder when selecting DataFlows and QueryViews to sync. The sync behavior of other resources is not impacted. 
 
-With [`SyncSettings.SourceSearchParameters`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SourceSearchParameters) = "(name : "app1") OR (name : "app2")", a DataFlow or QueryView from one of the source folders is only synced if it has the name "app1" or "app2".
+With [`SyncSettings.SourceSearchParameters`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SourceSearchParameters) = "(name : "app1") OR (name : "app2")", a DataFlow or QueryView from one of the source folders will only be synced if it has the name "app1" or "app2".
 
-With [`SyncSettings.SourceSearchParameters`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SourceSearchParameters) = "(Type : "DataFlow")", only DataFlows are synced. 
+With [`SyncSettings.SourceSearchParameters`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SourceSearchParameters) = "(Type : "DataFlow")", only DataFlows will be synced. 
 
 ### Sync Run Retention Settings
 
