--- a/docs/02.Composable-Platform/02.Navigation.md
+++ b/docs/02.Composable-Platform/02.Navigation.md
@@ -20,13 +20,17 @@ The login tab also has links that can help you reset your password if forgotten.
 !!! note
     Once registered, a system admin will need to approve your account, and you will receive an e-mail notification once approved.
 
-## "Windows Authentication"
+## Windows Authentication
 
 If Windows Authentication is enabled on your Composable instance, users will see their windows login information already populated, providing a seamless Single-Sign-On (SSO) experience.
 
 ![Composable Registration with Windows Auth](img/02.02.Composable2.0_WinAuthReg.png)
 
 As you can see on the above screenshot, the username shown is in the form domain\username and is pre-populated and read-only. To log bypassing Windows Authentication, and using username/password credentials, simply click on Forms Login.
+
+## Windows Authentication
+
+Composable also integrates with Azure Active Directory (AD) and allows users to login using their Microsoft Accounts.
 
 # Smart Navigation
 
