--- a/docs/02.Composable-Platform/04.Product-Areas.md
+++ b/docs/02.Composable-Platform/04.Product-Areas.md
@@ -33,7 +33,7 @@ Composable WebApps are full web applications, including visualizations built wit
 
 ## QueryViews
 
-Composable QueryViews provide an interface for distributed queires and live data grids. 
+Composable QueryViews provide an interface for distributed queries and live data grids. 
 
 ![Composable QueryViews](img/02.04.QueryViews.png)
 
