--- a/docs/02.Composable-Platform/05.System-Administration.md
+++ b/docs/02.Composable-Platform/05.System-Administration.md
@@ -22,7 +22,7 @@ Users can access their profile by clicking on the icon in the topbar.
 On a user profile page, users can:
 
 - Edit their user details (e.g., Name, Organization)
-- Upload a profile phot
+- Upload a profile photo
 - View a list of all their Composable resources (e.g., DataFlows, QueryViews, WebApps, ...)
 - View a list of Groups they are members of
 - View their recent activity
