--- a/docs/02.Composable-Platform/05.System-Administration.md
+++ b/docs/02.Composable-Platform/05.System-Administration.md
@@ -41,7 +41,7 @@ On a user profile page, users can:
 
 ## Groups
 
-Groups in Composable are collections of users. Any user can create group, and add members accordingly. Users can be added to the group by the owner, and also by any user or any other group, with write access to the group. Users can also request to join a group. Group owners are sent an email when a join request is created, and owners have the option to accept or reject it.
+Groups in Composable are collections of users. Any user can create a group, and add members accordingly. Users can be added to the group by the owner, and also by any user or any other group, with write access to the group. Users can also request to join a group. Group owners are sent an email when a join request is created, and owners have the option to accept or reject it.
 
 Groups provide a natural and collaborative mechanism for multiple users to work together on specific tasks. Groups can be given permission to specific Composable resources (e.g., DataFlows). Rather than giving permissions at the individual user level, permissions can be specified at the group level. For example, if you want to give only certain people write permissions to a DataFlow, you can create a group, assign the group write permissions to that DataFlow, and then add users to the group. 
 
@@ -122,4 +122,4 @@ The modules tab of the Administration portal provides an interface to list and s
 ![Composable Admin Portal - Modules Tab](img/02.05.Admin-Modules.png)
 
 !!! note
-    Users are not granted permissions to certain modules (e.g., File Mover) by defualt. If a user requires a module, but cannot find it in the Module Library, it is most likely due to the modules permission settings, that can be configured by the system administrators using this portal.
+    Users are not granted permissions to certain modules (e.g., File Mover) by default. If a user requires a module, but cannot find it in the Module Library, it is most likely due to the modules permission settings, that can be configured by the system administrators using this portal.
