--- a/docs/03.DataFlows/07.Custom-Modules.md
+++ b/docs/03.DataFlows/07.Custom-Modules.md
@@ -224,4 +224,4 @@ namespace TextAnalytics
 
 ### Module ReadMe
 
-When your Module is done, add a readme for it. Find the Product/ModuleResources folder. Inside it, find the folder for your Module's namespace (i.e., the “comp.companalytics” in the attribute “[ModuleType(Name = “Hello World”, Namespace = “comp.companalytics”, Category = ModuleCategory.Operator)]”). For new odules, this should be “companalytics”. Then, create a folder with your Module's full name (e.g. “Hello World”). Create a file called readme.md there. You won't have to build the solution after doing this – just try clicking the '?' button on your new Module and see if the readme appears. Refer to existing readmes for format. Markdown is supported for the formatting.
+When your Module is done, add a readme for it. Find the Product/ModuleResources folder. Inside it, find the folder for your Module's namespace (i.e., the “comp.companalytics” in the attribute “[ModuleType(Name = “Hello World”, Namespace = “comp.companalytics”, Category = ModuleCategory.Operator)]”). For new Modules, this should be “companalytics”. Then, create a folder with your Module's full name (e.g. “Hello World”). Create a file called readme.md there. You won't have to build the solution after doing this – just try clicking the '?' button on your new Module and see if the readme appears. Refer to existing readmes for format. Markdown is supported for the formatting.
