--- a/docs/04.QueryViews/02.Create-QueryView.md
+++ b/docs/04.QueryViews/02.Create-QueryView.md
@@ -19,7 +19,7 @@ The QueryView Edit mode looks as follows:
 
 Note the three sections: a set of configuration menu items on the left, the query template window, and the sample output window.
 
-To begin, click through the verticle menu items:
+To begin, click through the vertical menu items:
 
 ![Composable QueryView Menu](img/04.02.Img_2.png)
 
@@ -41,7 +41,7 @@ As an example, you can do the following:
 
 ![Composable QueryView template](img/04.02.Img_5.png)
 
-Note that as you write your SQL statement, Composable checks and converst your query into a syntactically correct SQL statement viewable in the sample output window on the right. This will prove useful as we introduce inputs and paramters later on.
+Note that as you write your SQL statement, Composable checks and converts your query into a syntactically correct SQL statement viewable in the sample output window on the right. This will prove useful as we introduce inputs and parameters later on.
 
 !!! note
     Composable will execute this query on the underlying SQL host you select via the Composable Key. So you can write your SQL in any flavor of the language (e.g., for Oracle, DB2, MSSQL, Hive, etc.!
