--- a/docs/09.Keys/02.Using-Keys.md
+++ b/docs/09.Keys/02.Using-Keys.md
@@ -13,11 +13,11 @@ Creating, Searching and Sharing Keys in Composable is extremely easy to do. To g
 
 ![Composable Keys](img/09.02.Img_1.png)
 
-Doing so, will open up your Key Vault, where you can browse all of your Keys (Keys you have created), as well as all Keys shared with you by oter users.
+Doing so, will open up your Key Vault, where you can browse all of your Keys (Keys you have created), as well as all Keys shared with you by other users.
 
 ## Creating a New Key
 
-To create a new Key, simply New Key icon in the top right:
+To create a new Key, simply click the New Key icon in the top right:
 
 ![Composable New Key](img/09.02.Img_2.png)
 
@@ -25,7 +25,7 @@ At this point, you will be given an option to select the type of Key you want to
 
 ![Composable Key Types](img/09.02.Img_3.png)
 
-As you can see, Composable provides the option to store all types of complex access credentials inside the Key Vualt, including:
+As you can see, Composable provides the option to store all types of complex access credentials inside the Key Vault, including:
 
 - **Database Connection Settings**: Used to store credentials in the form of username, password, port, database name and sql host to connect to a database server
 - **FTP Credentials**: Used to store credentials in the form of username, password, port and ftp host, to access an ftp server
