--- a/docs/11.FluentAPI/02.FluentAPI-Reference.md
+++ b/docs/11.FluentAPI/02.FluentAPI-Reference.md
@@ -63,7 +63,7 @@ The FluentAPI is divided into three main sections: the ModuleBuilder, the Module
     - Returns:
         - The same `ModuleInputBuilder` upon which this method was called
     - ex: `calculator2.ConfigureInput(m => m.Param1).WithConnection(calculator1.SelectOutput(upstream => upstream.Result));` connects the output of calculator1 to the first parameter in the second calculator
-* The `ModuleInputBuilder` also has convinience methods that work the same as the `ModuleBuilder` that simply operate on the Module to which this ModuleInput belongs;
+* The `ModuleInputBuilder` also has convenience methods that work the same as the `ModuleBuilder` that simply operate on the Module to which this ModuleInput belongs;
     - `ConfigureInput`
     - `SelectOutput`
     - `SelectOutputValue`
@@ -112,7 +112,7 @@ The FluentAPI is divided into three main sections: the ModuleBuilder, the Module
         - The ApplicationInspector this method was called on
     - ex: `var appInspector = ApplicationInspector.Create().SetPassword("mypassword");`
 * `Configure`
-    - Convinience method to set the BaseUri, UserName, and Password all at once
+    - Convenience method to set the BaseUri, UserName, and Password all at once
     - Input Parameters:
         - `Uri baseUri`: The base Uri of Composable
         - `string userName`: Your UserName
