Fixing broken internal links

--- a/docs/01.Getting-Started/03.Installation-and-Deployment.md
+++ b/docs/01.Getting-Started/03.Installation-and-Deployment.md
@@ -43,7 +43,7 @@ Composable is used to build *operational* data-intensive applications, and as su
 
 ## Upgrades
 
-For on-premise installations and upgrades, a system admin can perform an installation or upgrade by simply following the Composable installation wizard. When upgrading an instance, an upgrade path is provided for Modules (see [Modules](03.DataFlows/04.Modules.md)).
+For on-premise installations and upgrades, a system admin can perform an installation or upgrade by simply following the Composable installation wizard. When upgrading an instance, an upgrade path is provided for Modules (see [Modules](../03.DataFlows/04.Modules.md)).
 
 ### Composable Installation Wizard
 
