--- a/docs/03.DataFlows/02.Composable-Designer.md
+++ b/docs/03.DataFlows/02.Composable-Designer.md
@@ -23,7 +23,7 @@ The Composable Designer user interface is made up of five primary areas: the can
 
 The canvas area is the main working area for the Composable Designer, where modules are placed and connected to form full DataFlow Applications. Once Modules are placed on the canvas, they can be moved around, resized, and connected with other modules. While the execution order of the modules are determined by the underlying graph structure of the DataFlow, it is recommeded to take a left-to-right or top-to-bottom layout for optimal human-readability.
 
-The canvas is dynamic and large enough for even the most complex DataFlows, but if you find that you need more room, consider (encapsulating your DataFlows).(../3.2.1-keyboard-Shortcuts.md).
+The canvas is dynamic and large enough for even the most complex DataFlows, but if you find that you need more room, consider [encapsulating your DataFlows](./03.Keyboard-Shortcuts.md).
 
 ## Module Library
 
