--- a/docs/03.DataFlows/05.DataFlows.md
+++ b/docs/03.DataFlows/05.DataFlows.md
@@ -13,19 +13,19 @@ some_url: https://docs.composable.ai
 
 Composable focuses on bringing together disparate datasets, disseminating results, and producing data feeds and services. The platform's strength and inifinite flexibility for consuming, querying, and joining of data is achieved by composing event-driven workflows.
 
-Composable DataFlow Applications ("DataFlows") are event-driven workflows that consists of functional blocks, ["modules"](../3.2-Modules.md), strung together with connections to form full analytical workflows.
+Composable DataFlow Applications ("DataFlows") are event-driven workflows that consists of functional blocks, [*Modules*](./04.Modules.md), strung together with connections to form full analytical workflows.
 
-At its core, a DataFlow is a directed graph, where the nodes are the modules, and the edges are the connections between module inputs and outputs. DataFlows are authored using an intuitive, flow-based programming methodology available in the [Composable Designer](../3.2-Composable-Designer.md).
+At its core, a DataFlow is a directed graph, where the nodes are the modules, and the edges are the connections between module inputs and outputs. DataFlows are authored using an intuitive, flow-based programming methodology available in the [Composable Designer](./02.Composable-Designer.md).
 
 For developers, DataFlows can represent microservices, and can be used in a microservice-based approach to building large software applications. DataFlows are independently deployable services that are part of a broader Microservice Architecture.
 
 ![Composable DataFlow Application](img/03.01.Img_1.png)
 
-DataFlow Applications in Composable consist of functional blocks ([Modules](./04.Modules.md)) strung together with connections to create new functionality. A DataFlow Applications model is an acyclic directed graph, where the nodes are the modules, and the edges are the connections between module inputs and outputs.
+DataFlow Applications in Composable consist of functional blocks, [Modules](./04.Modules.md), strung together with connections to create new functionality. A DataFlow Applications model is an acyclic directed graph, where the nodes are the modules, and the edges are the connections between module inputs and outputs.
 
 ## Executing DataFlows
 
-The most common way of running a DataFlow Application is in the [Composable Designer](../3.2-Composable-Designer.md). As users develop a DataFlow Application, they can run it at any time by clicking the run button. Designing and running an application within the same space creates a very interactive experience for the user.
+The most common way of running a DataFlow Application is in the [Composable Designer](./02.Composable-Designer.md). As users develop a DataFlow Application, they can run it at any time by clicking the run button. Designing and running an application within the same space creates a very interactive experience for the user.
 
 ### DataFlow Execution
 
@@ -33,15 +33,15 @@ Because a DataFlow is fundamentally a directed graph, the Composable execution e
 
     !!! Note
         Although the user creates and interacts with the DataFlow in a web browser, the actual execution of the Dataflow occurs in the backend web servers and status and results are sent back and forth in a real-time manner.
-
+    
     !!! Note
         Note that in certain cases, e.g., if a module in a DataFlow is actually a web service, DataFlow execution can also result in computations or queries on remote systems outside the Composable host server.
 
-Whenever the DataFlow is run from the [Composable Designer](../3.2-Composable-Designer.md), the entire DataFlow application model in the browser is sent to the application web service for execution. This is required because the user may want to change the DataFlow and run it, without saving the DataFlow to the database.
+Whenever the DataFlow is run from the [Composable Designer](./02.Composable-Designer.md), the entire DataFlow application model in the browser is sent to the application web service for execution. This is required because the user may want to change the DataFlow and run it, without saving the DataFlow to the database.
 
 ## Debugging DataFlows
 
-The [Composable Designer](../3.2-Composable-Designer.md) has a built in debugging environment to aide in troubleshooting the creation and running of DataFlow Applications.
+The [Composable Designer](./02.Composable-Designer.md) has a built in debugging environment to aide in troubleshooting the creation and running of DataFlow Applications.
 
 Users can step through a DataFlow run, halting execution after each module execution. This allows users to understand the order in which modules are running and also look at intermediate outputs. If a DataFlow is calling another DataFlow (see [DataFlow Reuse](./06.DataFlow-Reuse.md)), the user can ‘step into’ and start debugging the referenced DataFlow run. Assuming the user has the required read and execute permissions, the referenced DataFlow and the current execution context is loaded in another designer tab, where they can then step through and debug the DataFlow just like the parent DataFlow. Once complete, they can then switch back to the parent DataFlow to continue debugging the current run.
 
@@ -64,7 +64,7 @@ A DataFlow application can also act like a web service or a web page. Simply dra
 
     !!! Note 
         DataFlows are web services! Not only can you coordinate calls to web services, but you can now *also* graphically program the internal workings of web services.
-
+    
     !!! Note
         Note that callers of the DataFlow application web service need execute permissions on the DataFlow application. The web request for the DataFlow should have a correct authentication cookie, or if everyone has been given ‘execute’ permissions on the application, then an anonymous web request will be accepted.
 
