--- a/docs/04.QueryViews/02.Create-QueryView.md
+++ b/docs/04.QueryViews/02.Create-QueryView.md
@@ -27,7 +27,7 @@ To begin, click through the verticle menu items:
 
 ![Composable New QueryView](img/04.02.Img_3.png)
 
-2. Connection: Here, select the ["Composable Key"](./09.Keys/01.Overview.md) to connect to the data store of your choice.
+2. Connection: Here, select the ["Composable Key"](../09.Keys/01.Overview.md) to connect to the data store of your choice.
 
 ![Composable New QueryView](img/04.02.Img_4.png)
 
