--- a/docs/05.DataPortals/02.Create-DataPortals.md
+++ b/docs/05.DataPortals/02.Create-DataPortals.md
@@ -70,8 +70,8 @@ Three columns are required for every row of every Container sheet, [Name,](06.Se
 - [NumberFormatting:](05.Control-Details/NumberFormatting.md) Editable number field with customizable formatted display when not editing.
 - [Page:](05.Control-Details/Page.md) Link to a new container in a 1-1 relationship with the current container.
 - [Phone:](05.Control-Details/Phone.md) Enter a phone number.
-- [QueryView:](05.Control-Details/QueryView.md) Display the results of a Composable [QueryView](04.QueryViews/Overview.md).
-- [QueryViewChooser:](05.Control-Details/QueryViewChooser.md) Select a row from a Composable [QueryView](04.QueryViews/Overview.md) and use its values to populate other fields.
+- [QueryView:](05.Control-Details/QueryView.md) Display the results of a Composable [QueryView](../04.QueryViews/01.Overview.md).
+- [QueryViewChooser:](05.Control-Details/QueryViewChooser.md) Select a row from a Composable [QueryView](../04.QueryViews/01.Overview.md) and use its values to populate other fields.
 - [Radio:](05.Control-Details/Radio.md) Select one of several predefined values. Also see [Categories.](04.Categories.md)
 - [Rating:](05.Control-Details/Rating.md) Give a whole number rating within a customizable range.
 - [Reference:](05.Control-Details/Reference.md) Chose an instance of another container within the same DataPortal
