Adding internal links and index page icon

--- a/docs/Composable-Platform/04.Product-Areas.md
+++ b/docs/Composable-Platform/04.Product-Areas.md
@@ -17,13 +17,13 @@ The main capabilities offered by Composable are organized around product areas f
 
 # Data Processing & Transformations
 
-## DataFlows
+## [DataFlows](../DataFlows/01.Overview.md)
 
 Composable DataFlows are data processing and analytical workflows, utilizing Composable's flow-based programming method. Each dataflow consists of modules that are connected together to produce higher-level functionality.
 
 ![Composable DataFlows](img/02.04.DataFlows.png)
 
-## WebApps
+## [WebApps](../WebApps/01.Overview.md)
 
 Composable WebApps are full web applications, including visualizations built with d3.js, built and seamlessly integrated with Composable using well-defined web services and API endpoints.
 
@@ -31,27 +31,27 @@ Composable WebApps are full web applications, including visualizations built wit
 
 # Data Exploration
 
-## QueryViews
+## [QueryViews](../QueryViews/01.Overview.md)
 
 Composable QueryViews provide an interface for distributed queries and live data grids. 
 
 ![Composable QueryViews](img/02.04.QueryViews.png)
 
-## DashBoards
+## [DashBoards](../DashBoards/01.Overview.md)
 
 Composable DashBoards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
 
 ![Composable DashBoards](img/02.04.DashBoards.png)
 
-## DataExplorer
+## [DataRepository](../DataRepository/01.Overview.md)
 
-Composable DataExplorer allows users to connect to a data repository, visualize relationships, explore the data and save a collection of reusable queries.
+Composable DataRepository allows users to connect to a data repository, visualize relationships, explore the data and save a collection of reusable queries.
 
 ![Composable DataExplorer](img/02.04.DataExplorer.png)
 
 # Data Modeling & Storage
 
-## DataPortals
+## [DataPortals](../DataPortals/01.Overview.md)
 
 Composable DataPortals provides a rapid application development environment for modelling data and automatically generating the web and business layers and custom web user interface.
 
