--- a/docs/Keys/02.Using-Keys.md
+++ b/docs/Keys/02.Using-Keys.md
@@ -59,7 +59,7 @@ To share a Key, open the Key and click on share in the top right:
 
 ![Composable Key Share](img/09.02.Img_5.png)
 
-Similar to the other access control pages for other Composable resources, you can now select individual Users, Groups, or Everyone and Anyone with an Account, and provide access to the Key at a granual level:
+Similar to the other access control pages for other Composable resources, you can now select individual Users, Groups, or Everyone and Anyone with an Account, and provide access to the Key at a granular level:
 
 - Delete
 - Discover
