fix search in-page links

--- a/docs/Composable-Platform/03.Search.md
+++ b/docs/Composable-Platform/03.Search.md
@@ -23,11 +23,11 @@ Once on the Search page, you will be presented with all the Composable resources
 
 #### Search Basics
 
-A Composable search has three optional components: _Search Text_, _Filters_, and [_Ordering_](#Ordering-Results). Resources with names, descriptions, or tags that contain _Search Text_ are matched. _Filters_ narrow down search results, and _Ordering_ determines the order in which results are displayed. A search without _Search Text_ returns all Resources that match the _Filters_. None of the search components are case sensitive.
+A Composable search has three optional components: _Search Text_, _Filters_, and [_Ordering_](#ordering-results). Resources with names, descriptions, or tags that contain _Search Text_ are matched. _Filters_ narrow down search results, and _Ordering_ determines the order in which results are displayed. A search without _Search Text_ returns all Resources that match the _Filters_. None of the search components are case sensitive.
 
 *   `Very useful` returns all Resources with the text "very useful" in their name, description, or a tag.
 
-_Filters_, defined using a `filterName:value` pair, limit results to Resources with the property `filterName` that matches `value`. These must be exact matches (case insensitive); `values` cannot be truncated or have words left out. `filterNames` and `values` that contain a space must be surrounded by double quotes ("like this"). [Combining _Filters_](#Combining-Filters) provides details on creating more complex searches.
+_Filters_, defined using a `filterName:value` pair, limit results to Resources with the property `filterName` that matches `value`. These must be exact matches (case insensitive); `values` cannot be truncated or have words left out. `filterNames` and `values` that contain a space must be surrounded by double quotes ("like this"). [Combining _Filters_](#combining-filters) provides details on creating more complex searches.
 
 *   `Very useful type:dataflow` narrows the search to only return DataFlows.
 *   `name:"My App"` returns Resources of all types with the name "My App", but will not match "My App Rocks" or "MyApp".
